# Seq2SeqSharp

./: .gitignore  LICENSE  README.md  Seq2SeqSharp.code-workspace  Seq2SeqSharp.sln  UpgradeLog.htm  clear-after-build.cmd
AdvUtils/: AdvUtils.csproj  BigArray.cs  DictMatch.cs  FixedSizePriorityQueue.cs  Logger.cs  README.md  VarBigArray.cs  VectorQuantization.cs
CpuOps/: ConvolutionUnfold.cpp  ConvolutionUnfold.h  CpuOps.vcxproj  DimensionwiseOps.cpp  DimensionwiseOps.h  ElementwiseOps.cpp  ElementwiseOps.h  FillCopyOps.cpp  FillCopyOps.h  GatherScatterOps.cpp  GatherScatterOps.h  LayerNormOps.cpp  LayerNormOps.h  OptimizerOps.cpp  OptimizerOps.h  TensorApply-inl.h
ExternalProjects/: README.txt
PyPackage/: LICENSE  README.md  a  a.out  chs.model  chs.vocab  chsYBSpm.model  enu.model  enu.vocab  input.txt  setup.py  test.src  testGPT.py  testOpenAIGPT2.py  testSeq2Seq.py  trainGPT.py  trainSeq2Seq.py  train_opts.json
SentencePiece/: .gitignore  CMakeSettings.json  test.bat
Seq2SeqClassificationConsole/: Program.cs  Seq2SeqClassificationConsole.csproj
Seq2SeqConsole/: .gitignore  App.config  Options.cs  Program.cs  Seq2SeqConsole.csproj
Seq2SeqSharp/: ArchEnums.cs  AttentionDecoder.cs  AttentionSeq2Seq.cs  AttentionUnit.cs  BiEncoder.cs  ContextDecoder.cs  ContextSeq2Seq.cs  CostEventArg.cs  DecayLearningRate.cs  Decoder.cs  Encoder.cs  FeedForwardLayer.cs  IEncoder.cs  IModelMetaData.cs  IMultiProcessorNetworkWrapper.cs  LSTMAttentionDecoderCell.cs  LSTMCell.cs  LSTMContextDecoderCell.cs  LayerNormalization.cs  MultiProcessorNetworkWrapper.cs  Optimizer.cs  SelfAttention.cs  Seq2SeqModelMetaData.cs  Seq2SeqSharp.csproj  SequenceLabel.cs  TensorAllocator.cs  TransformerEncoder.cs  app.config  packages.config
Seq2SeqWebAPI/: Program.cs  Seq2SeqInstance.cs  Seq2SeqWebAPI.csproj  Startup.cs
SeqClassificationConsole/: Program.cs  SeqClassificationConsole.csproj
SeqClassificationWebAPI/: Program.cs  SeqClassificationInstance.cs  (+2 more)
TensorSharp.GGML.Native/: CMakeLists.txt  build-macos.sh  ggml_ops.cpp
(+513 files in other folders)
